# hierarchy_app

./: README.md  dockerfile  pyproject.toml  requirements.txt  ruff.toml
img/: hierarchy.drawio
src/: main.py
src/algorithms/: __init__.py  navigation.py
src/algos/: charts.py  navigation.py
src/callbacks/: __init__.py  callbacks.py
src/create_dataset/: create_dataset.ipynb
src/css/: main.css
src/data/: company_groups.parquet
tests/: test_navigation.py
